--- a/index.html
+++ b/index.html
@@ -491,8 +491,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <div class="container-fluid p-100">
   <div class="row ">
-    <div class="col-md-1"></div>
-    <div class="col-md-5">
+    <div class="col-md-6 pl-130">
       <div class="main-image mt-4 "data-aos="fade-up"
       data-aos-anchor-placement="top-center" >
         <img src="assets/images/mobile.png" class="large-image" alt="">
@@ -546,7 +545,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       <div class="text-icon"data-aos="fade-up" data-aos-duration="1000">
           <img src="assets/images/true-img.PNG" alt="#" class="image-true"><p>Faster repeat transfers with just a few taps.</p>
       </div>
-      <div class="d-flex justify-content-start mt-4"data-aos="fade-up" data-aos-duration="1000">
+      <div class="d-flex justify-content-start mt-4 mb-3"data-aos="fade-up" data-aos-duration="1000">
         <a href="https://apps.apple.com/your-app-store-link" class="bottom">
           <img src="assets/images/apple-icon.PNG" alt="Download App from App Store">
           <div class="go-app-text">Download on the <br> <span>App Store</span></div>
