--- a/indgovernment.html
+++ b/indgovernment.html
@@ -161,7 +161,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </ul>
 
         <div class="navbar-nav">
-          <button class="btn-contact d-lg-inline d-none mr-1">Contact Us</button>
+          <a href="contact.html" class="btn-contact d-lg-inline d-none mr-1">Contact Us</a>
           <a class="nav-link" href="#"><i class="fas fa-search search-icon"></i></a>
           <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EN<span class="mr-1"></span></a>
@@ -424,10 +424,10 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                               Our user-friendly app simplifies your financial experience.</p>
                             <div class="btn-group mt-4" data-aos="fade-up" data-aos-duration="1000">
                                 <div class="btn-wrapper" >
-                                    <button type="button" class="btn get-started">Get started</button>
+                                  <a href="your_url_here" class="btn get-started">Get started</a>
                                 </div>
                                 <div class="btn-wrapper">
-                                    <button type="button" class="btn contact-us2">Contact Us</button>
+                                  <a href="your_url_here" class="btn contact-us2">Contact Us</a>
                                 </div>
                             </div>
                         </div>
