media news updated

--- a/Mnews.html
+++ b/Mnews.html
@@ -197,7 +197,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       <div class="form-group">
         <input type="email" class="form-control email-input"data-aos="fade-up" data-aos-duration="900" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email">
       </div>
-      <button type="submit" class="btn btn-subscribe"data-aos="fade-up" data-aos-duration="1100" style="padding: 12px;">Subscribe</button>
+      <a href="https://example.com/destination" class="btn btn-subscribe" data-aos="fade-up" data-aos-duration="1100" style="padding: 12px;">Subscribe</a>
+
     </div>
   </div>
 </div>
@@ -205,23 +206,21 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   
 
 <!--latest news section-->
+
 <div class="container-fluid p-100">
   <div class="row">
     <div class="col-md-12 col-sm-12">
       <div class="last-news-section">
-        <h2 class="last-news-title"data-aos="fade-up" data-aos-duration="1000">Last news</h2>
-        <ul class="news-menu list-unstyled d-flex flex-wrap justify-content-center"data-aos="fade-up" data-aos-duration="500">
-          <!-- Menu for filtering news -->
-          <li data-aos="fade-up" data-aos-duration="800"><a href="#" class="all-word">All</a></li>
-          <!-- Link for displaying all news -->
-          <li data-aos="fade-up" data-aos-duration="1000"><a href="#" class="news-word">News</a></li>
-          <!-- Link for displaying news only -->
-          <li data-aos="fade-up" data-aos-duration="1200"><a href="#" class="articles-word">Articles</a></li>
-          <!-- Link for displaying articles only -->
+        <h2 class="last-news-title">Last news</h2>
+        <ul class="news-menu list-unstyled d-flex flex-wrap justify-content-center">
+          <li><a href="#" class="all-word selected">All</a></li>
+          <li><a href="#" class="news-word">News</a></li>
+          <li><a href="#" class="articles-word">Articles</a></li>
         </ul>
       </div>
     </div>
-    
+
+        
      <!-- New Item 1 -->
     <div class="col-md-4 last-news-imgs mt-4">
       <div class="news-item ">
