Podcast magazine and inner page

--- a/Mnews.html
+++ b/Mnews.html
@@ -228,19 +228,25 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
      <!-- New Item 1 -->
     <div class="col-md-4 last-news-imgs mt-4">
       <div class="news-item ">
-        <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="your_link_here">
+          <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
+      </a> 
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.  </p>
       </div>
       <div class="verticle-line-news"></div>
       <div class="author-info">
-        <img src="assets/images/author-img.jpeg" alt="Mostafa Gamal" class="rounded-circle author-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="link_to_your_destination">
+          <img src="assets/images/author-img.jpeg" alt="Mostafa Gamal" class="rounded-circle author-image" data-aos="fade-up" data-aos-duration="600">
+      </a>      
         <div class="author-details">
           <h5 data-aos="fade-up" data-aos-duration="900">Mostafa Gamal</h5>
           <p data-aos="fade-up" data-aos-duration="1200">Jun 10, 2023</p>
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
-          <i class="fas fa-angle-right"></i>
+          <a href="your_link_here">
+            <i class="fas fa-angle-right"></i>
+        </a> 
         </div>
       </div>
     </div>
@@ -248,7 +254,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- New Item 2 -->
     <div class="col-md-4 last-news-imgs mt-4">
       <div class="news-item">
-        <img src="assets/images/medianews-imgs.jpeg" alt="News 2" class="img-fluid news-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="your_link_here">
+          <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
+      </a> 
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
@@ -260,7 +268,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <p data-aos="fade-up" data-aos-duration="1200">Jun 10, 2023</p>
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
-          <i class="fas fa-angle-right"></i>
+          <a href="your_link_here">
+            <i class="fas fa-angle-right"></i>
+        </a> 
         </div>
       </div>
     </div>
@@ -268,7 +278,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- New Item 3 -->
     <div class="col-md-4 last-news-imgs mt-4">
       <div class="news-item">
-        <img src="assets/images/medianews-imgs.jpeg" alt="News 3" class="img-fluid news-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="your_link_here">
+          <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
+      </a> 
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
@@ -280,7 +292,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <p data-aos="fade-up" data-aos-duration="1200">Jun 10, 2023</p>
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
-          <i class="fas fa-angle-right"></i>
+          <a href="your_link_here">
+            <i class="fas fa-angle-right"></i>
+        </a> 
         </div>
       </div>
     </div>
@@ -288,7 +302,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- New Item 4 -->
     <div class="col-md-4 last-news-imgs ">
       <div class="news-item">
-        <img src="assets/images/medianews-imgs.jpeg" alt="News 3" class="img-fluid news-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="your_link_here">
+          <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
+      </a> 
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
@@ -300,7 +316,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <p data-aos="fade-up" data-aos-duration="1200">Jun 10, 2023</p>
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
-          <i class="fas fa-angle-right"></i>
+          <a href="your_link_here">
+            <i class="fas fa-angle-right"></i>
+        </a> 
         </div>
       </div>
     </div>
@@ -308,7 +326,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- New Item 5 -->
     <div class="col-md-4 last-news-imgs ">
       <div class="news-item">
-        <img src="assets/images/medianews-imgs.jpeg" alt="News 4" class="img-fluid news-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="your_link_here">
+          <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
+      </a> 
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
@@ -320,7 +340,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <p data-aos="fade-up" data-aos-duration="1200">Jun 10, 2023</p>
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
-          <i class="fas fa-angle-right"></i>
+          <a href="your_link_here">
+            <i class="fas fa-angle-right"></i>
+        </a> 
         </div>
       </div>
     </div>
@@ -328,7 +350,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- New Item 6 -->
     <div class="col-md-4 last-news-imgs">
       <div class="news-item">
-        <img src="assets/images/medianews-imgs.jpeg" alt="News 5" class="img-fluid news-image"data-aos="fade-up" data-aos-duration="600">
+        <a href="your_link_here">
+          <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
+      </a> 
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
@@ -340,7 +364,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <p data-aos="fade-up" data-aos-duration="1200">Jun 10, 2023</p>
         </div>
         <div class="author-details-icon" data-aos="fade-up" data-aos-duration="1000">
-          <i class="fas fa-angle-right"></i>
+          <a href="your_link_here">
+            <i class="fas fa-angle-right"></i>
+        </a>        
         </div>
       </div>
     </div>
