Momken Pay Page

--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -230,7 +230,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
             <div class="podcast-items">
               <div class="small-image">
                 <a href="your_link_here">
-                  <img src="assets/images/audiovector-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
+                  <img src="assets/images/pod-innerpage-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
               </a>              
               </div>
               <a href="your_link_here">
@@ -242,9 +242,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               </div>
             </div>
             <div class="podcast-text">
-              <h3 data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet <br>consectetur.</h3>
+              <h3 data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet <br>consectetur.Lorem ipsum dolor sit amet consectetur.Lorem ipsum dolor sit amet consectetur.Lorem ipsum dolor sit amet consectetur. </h3>
               <p data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur.
-                Elementum in eros sed elit ultricies in ut. <br>Lacus mattis vestibulum molestie ac.</p>
+                Elementum in eros sed elit ultricies in ut. <br>Lacus mattis vestibulum molestie ac. </p>
               <div style="margin-top: 23px; margin-bottom: 17px;">
                 <a href="your_link_here" class="listen-now"data-aos="fade-up" data-aos-duration="1000">
                   <svg width="62" height="62" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -263,7 +263,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <div class="podcast-items">
           <div class="small-image">
             <a href="your_link_here">
-              <img src="assets/images/audiovector-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
+              <img src="assets/images/pod-innerpage-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
           </a>  
           </div>
           <a href="your_link_here">
@@ -295,7 +295,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <div class="podcast-items">
           <div class="small-image">
             <a href="your_link_here">
-              <img src="assets/images/audiovector-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
+              <img src="assets/images/pod-innerpage-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
           </a>  
           </div>
           <a href="your_link_here">
@@ -327,7 +327,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
             <div class="podcast-items">
               <div class="small-image">
                 <a href="your_link_here">
-                  <img src="assets/images/audiovector-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
+                  <img src="assets/images/pod-innerpage-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
               </a>  
               </div>
               <a href="your_link_here">
@@ -359,7 +359,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <div class="podcast-items">
           <div class="small-image">
             <a href="your_link_here">
-              <img src="assets/images/audiovector-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
+              <img src="assets/images/pod-innerpage-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
           </a>  
           </div>
           <a href="your_link_here">
@@ -390,7 +390,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <div class="podcast-items">
           <div class="small-image">
             <a href="your_link_here">
-              <img src="assets/images/audiovector-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
+              <img src="assets/images/pod-innerpage-img.PNG" data-aos="fade-up" data-aos-duration="1000" alt="Small Image">
           </a>  
           </div>
           <a href="your_link_here">
