Point of sales page

--- a/article.html
+++ b/article.html
@@ -11,10 +11,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+
+
 
 <!-- Font Stylesheets -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,13 +45,12 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
-
-
-  <title>Al-Ahly Momken-Media Article</title>
+  <title>Al-Ahly Momken-Article Page</title>
 </head>
 
-<body style="background-image: url('assets/images/article-bg.png'); background-size: cover; background-position: center; z-index: 0;">
- 
+<body style="background-image: url('assets/images/article-bg.png'); background-size: cover; background-position: center;">
+  <div style="background-color: rgba(255, 255, 255, 0);">
+
   
   
   <nav class="navbar navbar-expand-lg fixed-top pt-4 pb-4">
@@ -64,30 +65,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">Consumer</a>
-            <div class="dropdown-menu dropdown-menu-end consumer-dropdown" aria-labelledby="navbarDropdown1">
-              <div class=" dropdown-title ml-3">PAYMENT SERVICES</div>
-              <div class=" d-flex justify-content-between">
-                <div class="consumer-features p-3 pr-5">
-                  <ul class="list-unstyled column-one">
-                    <li><a href="#">Top-up</a></li>
-                    <li><a href="#">Bills</a></li>
-                    <li><a href="#">Installments</a></li>
-                    <li><a href="#">Membership Renewal</a></li>
-                    <li><a href="#">Subscription</a></li>
-                  </ul>
-                </div>
-                <div class="consumer-features p-3">
-                  <ul class="list-unstyled column-two ml-5">
-                    <li><a href="#">Gaming E-Vouschers</a></li>
-                    <li><a href="#">Tution & Fees</a></li>
-                    <li><a href="#">Loans & Grants</a></li>
-                    <li><a href="#">Ticketing</a></li>
-                    <li><a href="#">Donations</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+            <a class="nav-link " href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">Consumer</a> 
           </li>
           
           <li class="nav-item dropdown">
@@ -144,7 +122,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <div class="consumer-features">
                 <ul class="list-unstyled column-two ml-5">
                   <li><a href="#"><i class="fa-solid fa-caret-right mr-1 p-2"></i>Media & Press</a></li>
-                  <li class="news-item "><a href="#">News</a></li>
+                  <li class="news-item ml-4"><a href="#">News</a></li>
                   <li class="product-magazine ml-4"><a href="#">Podcasts & Magazines</a></li>
                 </ul>
               </div>
@@ -172,6 +150,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       </div>
     </div>
   </nav>
+
 
 
 
