--- a/indgovernment.html
+++ b/indgovernment.html
@@ -45,7 +45,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
-  <title>Al-Ahly Momken-Government Page</title>
+  <title>Al-Ahly Momken-Ind Government Page</title>
 </head>
 
 <body style="background-image: url('assets/images/business-gov-bg.png'); background-size: cover; background-position: center;">
@@ -65,30 +65,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">Consumer</a>
-            <div class="dropdown-menu dropdown-menu-end consumer-dropdown" aria-labelledby="navbarDropdown1">
-              <div class=" dropdown-title ml-3">PAYMENT SERVICES</div>
-              <div class=" d-flex justify-content-between">
-                <div class="consumer-features p-3 pr-5">
-                  <ul class="list-unstyled column-one">
-                    <li><a href="#">Top-up</a></li>
-                    <li><a href="#">Bills</a></li>
-                    <li><a href="#">Installments</a></li>
-                    <li><a href="#">Membership Renewal</a></li>
-                    <li><a href="#">Subscription</a></li>
-                  </ul>
-                </div>
-                <div class="consumer-features p-3">
-                  <ul class="list-unstyled column-two ml-5">
-                    <li><a href="#">Gaming E-Vouschers</a></li>
-                    <li><a href="#">Tution & Fees</a></li>
-                    <li><a href="#">Loans & Grants</a></li>
-                    <li><a href="#">Ticketing</a></li>
-                    <li><a href="#">Donations</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+            <a class="nav-link " href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">Consumer</a> 
           </li>
           
           <li class="nav-item dropdown">
@@ -173,6 +150,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       </div>
     </div>
   </nav>
+
 
 
   
