--- a/consumer.html
+++ b/consumer.html
@@ -17,7 +17,6 @@
 <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 
 
-
 <!-- Font Stylesheets -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +47,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Al-Ahly Momken-Consumer Page</title>
 </head>
 
-<body style="background-image: url('assets/images/pointofsales-bg.png'); background-size: cover; background-position: center;">
+<body style="background-image: url('assets/images/consumer-service-bg.png'); background-size: cover; background-position: center;">
   <div style="background-color: rgba(255, 255, 255, 0);">
 
   
@@ -180,27 +179,59 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
+  <section class="consumer-service-section">
+    <div class="container-fluid p-100">
+      <h2 class="consumer-section-title ">Consumer Service</h2>
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <div class="consumer-service-img">
+            <img src="assets/images/consumer-serv1.png" alt="Image 1" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="consumer-service-img">
+            <img src="assets/images/consumer-serv2.png" alt="Image 2" class=" img-fluid">
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="consumer-service-img">
+            <img src="assets/images/consumer-serv3.png" alt="Image 3" class=" img-fluid">
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="consumer-service-img">
+            <img src="assets/images/consumer-serv4.png" alt="Image 4" class=" img-fluid">
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="consumer-service-img">
+            <img src="assets/images/consumer-serv-6.png" alt="Image 5" class=" img-fluid">
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="consumer-service-img">
+              <img src="assets/images/consumer-serv5.png" alt="Image 6" class=" img-fluid">
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="consumer-service-img ">
+              <img src="assets/images/cons-service7.png" alt="Image 7" class=" img-fluid">
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="consumer-service-img">
+              <img src="assets/images/consumer-serv8.png" alt="Image 8" class=" img-fluid">
+            </div>
+          </div>
+      </div>
+    </div>
+  </section>
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-  <hr class="full-width-line-bottom mt-5 mb-4">
+  <hr class="full-width-line-bottom mt-4 mb-4">
 
   
  
@@ -267,10 +298,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     
   
    
-
-
-
-
 
             <!-- Footer section -->
   
