--- a/PodcastInnerPage.html
+++ b/PodcastInnerPage.html
@@ -200,7 +200,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                   </div>
                   <div>
                     <a href="your_link_here">
-                      <img src="assets/images/pod-magazine-img.jpeg" alt="News 1" class="img-fluid podcast-image" style="width: 282px; height: 282px;">
+                      <img src="assets/images/pod-magazine-img.jpeg" alt="News 1" class="img-fluid podcast-image-innerpage" style="width: 282px; height: 282px;">
                   </a>
                   </div>
                   <div class="img-podcast-innerpage-content">
