--- a/career-vacancy.html
+++ b/career-vacancy.html
@@ -261,13 +261,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               </div>
               <div class="sales-dev-body mt-4">
                 <div class="senior-level-icon d-flex">
-                  <img src="assets/images/mobile (1).svg" data-aos="fade-up" data-aos-duration="600"alt="image" class="career-icon">
+                  <img src="assets/images/book.svg" data-aos="fade-up" data-aos-duration="600"alt="image" class="career-icon">
                   <span class="senior-level-text "data-aos="fade-up" data-aos-duration="1000">Senior Level</span>
                 </div>
                 <div class="verticle-line-career"></div>
                 <div class="sales-details d-flex justify-content-between mt-3 ">
                   <span class="sales-details"data-aos="fade-up" data-aos-duration="1000">
-                    <img src="assets/images/mobile (1).svg" alt="image" class="career-icon" data-aos="fade-up" data-aos-duration="600"></i>Sales
+                    <img src="assets/images/briefcase.svg" alt="image" class="career-icon" data-aos="fade-up" data-aos-duration="600"></i>Sales
                   </span> 
                   <a href="your_link_here">
                     <i class="fas fa-angle-right"data-aos="fade-up" data-aos-duration="1000"></i>
@@ -286,13 +286,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               </div>
               <div class="sales-dev-body mt-4">
                 <div class="senior-level-icon d-flex">
-                  <img src="assets/images/mobile (1).svg" data-aos="fade-up" data-aos-duration="600"alt="image" class="career-icon">
+                  <img src="assets/images/book.svg" data-aos="fade-up" data-aos-duration="600"alt="image" class="career-icon">
                   <span class="senior-level-text "data-aos="fade-up" data-aos-duration="1000">Senior Level</span>
                 </div>
                 <div class="verticle-line-career"></div>
                 <div class="sales-details d-flex justify-content-between mt-3 ">
                   <span class="sales-details"data-aos="fade-up" data-aos-duration="1000">
-                    <img src="assets/images/mobile (1).svg" alt="image" class="career-icon" data-aos="fade-up" data-aos-duration="600"></i>Sales
+                    <img src="assets/images/briefcase.svg" alt="image" class="career-icon" data-aos="fade-up" data-aos-duration="600"></i>Sales
                   </span> 
                   <a href="your_link_here">
                     <i class="fas fa-angle-right"data-aos="fade-up" data-aos-duration="1000"></i>
@@ -310,13 +310,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               </div>
               <div class="sales-dev-body mt-4">
                 <div class="senior-level-icon d-flex">
-                  <img src="assets/images/mobile (1).svg" data-aos="fade-up" data-aos-duration="600"alt="image" class="career-icon">
+                  <img src="assets/images/book.svg" data-aos="fade-up" data-aos-duration="600"alt="image" class="career-icon">
                   <span class="senior-level-text "data-aos="fade-up" data-aos-duration="1000">Senior Level</span>
                 </div>
                 <div class="verticle-line-career"></div>
                 <div class="sales-details d-flex justify-content-between mt-3 ">
                   <span class="sales-details"data-aos="fade-up" data-aos-duration="1000">
-                    <img src="assets/images/mobile (1).svg" alt="image" class="career-icon" data-aos="fade-up" data-aos-duration="600"></i>Sales
+                    <img src="assets/images/briefcase.svg" alt="image" class="career-icon" data-aos="fade-up" data-aos-duration="600"></i>Sales
                   </span> 
                   <a href="your_link_here">
                     <i class="fas fa-angle-right"data-aos="fade-up" data-aos-duration="1000"></i>
