--- a/career.html
+++ b/career.html
@@ -190,8 +190,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <section class="careers-input " >
     <div class="container-fluid p-100">
       <div class="search-words-career">
-        <div class="word search-vacancies-word  "data-aos="fade-up" data-aos-duration="500" onclick="changeContent(this)"><i class="fa-solid fa-magnifying-glass" style="margin-left: 25px; margin-right: 15px;"></i>Search for vacancies</div>
-        <div class="word categories-word" data-aos="fade-up" data-aos-duration="800" onclick="changeContent(this)"><i class="fa-solid fa-magnifying-glass" style="margin-left: 25px; margin-right: 15px;"></i>All Categories<i class="fa-light fa-circle-chevron-down"></i></div>
+        <div class="word search-vacancies-word  "data-aos="fade-up" data-aos-duration="500" onclick="changeContent(this)"><img src="assets/images/search-normal.svg" alt=""style="margin-left: 22px; margin-right: 15px;">Search for vacancies </div>
+        <div class="word categories-word" data-aos="fade-up" data-aos-duration="800" onclick="changeContent(this)"><img src="assets/images/category-2.svg" alt=""style="margin-left: 21px; margin-right: 15px; margin-bottom:3px"></i>All Categories<img src="assets/images/arrow-circle-down.svg" alt="" style=" float: right;
+          margin-right: 15px;"></div>
         <div class="word search-word " data-aos="fade-up" data-aos-duration="1100" onclick="changeContent(this)">SEARCH</div>
       </div>
     </section>
