--- a/CareersEmpty.html
+++ b/CareersEmpty.html
@@ -186,15 +186,25 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   </div>
   
 
-  <section class="careers-input " >
+
+  <section class="careers-input">
     <div class="container-fluid p-100">
       <div class="search-words-career">
-        <div class="word search-vacancies-word  "data-aos="fade-up" data-aos-duration="500" onclick="changeContent(this)"><img src="assets/images/search-normal.svg" alt=""style="margin-left: 22px; margin-right: 15px;">Search for vacancies </div>
-        <div class="word categories-word" data-aos="fade-up" data-aos-duration="800" onclick="changeContent(this)"><img src="assets/images/category-2.svg" alt=""style="margin-left: 21px; margin-right: 15px; margin-bottom:3px"></i>All Categories<img src="assets/images/arrow-circle-down.svg" alt="" style=" float: right;
-          margin-right: 15px;"></div>
-        <div class="word search-word " data-aos="fade-up" data-aos-duration="1100" onclick="changeContent(this)">SEARCH</div>
+        <input type="text" class="word search-vacancies-word" data-aos="fade-up" data-aos-duration="500" placeholder="Search for vacancies">
+        <div class="word categories-word" data-aos="fade-up" data-aos-duration="800">
+          <img src="assets/images/category-2.svg" alt="Category" class="category-icon ml-3">All Categories
+          <img src="assets/images/arrow-circle-down.svg" alt="Dropdown" class="dropdown-icon">
+          <ul class="category-dropdown">
+            <li><a href="#">Category 1</a></li>
+            <li><a href="#">Category 2</a></li>
+            <li><a href="#">Category 3</a></li>
+          </ul>
+        </div>
+        <a href="your-link-here" class="word search-word" data-aos="fade-up" data-aos-duration="1100">SEARCH</a>
       </div>
-    </section>
+    </div>
+  </section>
+  
 
 
     <div class="container-fluid p-100 mt-5">
