--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -404,16 +404,18 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   
 
+
+
 <!-- Pagination -->
 <div class="container-fluid p-100">
   <div class="pagination-container mt-4">
     <nav aria-label="Page navigation" class="w-100">
       <ul class="pagination justify-content-between mx-auto">
-        <li class="page-item previous">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
-            <span class="pagination-word-left left">Previous</span>
-          </a>
+        <li class="page-item previous disabled no-hover"> 
+          <span class="page-link" aria-label="Previous">
+            <span aria-hidden="true"><i class="fa-solid fa-arrow-left disabled"></i></span>
+            <span class="pagination-word-left left disabled">Previous</span>
+          </span>
         </li>
         <li class="page-item active" data-aos="fade-up" data-aos-duration="400"><a class="number" href="#">1</a></li>
         <li class="page-item" data-aos="fade-up" data-aos-duration="600"><a class="number" href="#">2</a></li>
@@ -435,8 +437,15 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 
 
+ 
 
-  
+
+
+
+
+
+
+
 <div class="verticle-line-news" style="margin-top: 70px;" ></div>
 
 
@@ -623,7 +632,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <li class="page-item previous">
           <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
-            <span class="pagination-word-left left">Previous</span>
+            <span class="pagination-word-left left" disabled>Previous</span>
+
           </a>
         </li>
         <li class="page-item active" data-aos="fade-up" data-aos-duration="400"><a class="number" href="#">1</a></li>
